--- a/app/src/main/res/layout/activity_retrofit.xml
+++ b/app/src/main/res/layout/activity_retrofit.xml
@@ -79,4 +79,9 @@
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="#000000"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="uploadFile"
+        android:text="uploadFile" />
 </LinearLayout>
