day25 and NestedScroll test

--- a/app/src/main/res/layout/activity_nested_scroll.xml
+++ b/app/src/main/res/layout/activity_nested_scroll.xml
@@ -1,32 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.rent.mytestapplication.nestedscroll.NestedScrollActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+    <com.rent.mytestapplication.nestedscroll.widget.NestedParentView
+        android:layout_width="200dp"
+        android:background="@android:color/holo_blue_dark"
+        android:gravity="bottom|center_horizontal"
+        android:layout_height="400dp">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/holo_blue_dark"
-            android:text="aaaaaaaa\naaaaaaaa\naaaaaaaa\naaaaaaaa\naaaaaaaa\naaaaaaaa\naaaaaaaa"/>
+        <com.rent.mytestapplication.nestedscroll.widget.NestedChildView
+            android:layout_width="100dp"
+            android:layout_height="200dp"
+            android:background="@android:color/holo_green_dark"
+            />
+    </com.rent.mytestapplication.nestedscroll.widget.NestedParentView>
 
-        <android.support.v4.widget.NestedScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@android:color/holo_green_dark"
-                android:text="bbbbbb\n\nbbbbbb\n\nbbbbbb\n\nbbbbbb\n\nbbbbbb\n\nbbbbbb\n\nbbbbbb\n\nbbbbbb\n\nbbbbbb\n\nbbbbbb\n\nbbbbbb\n\nbbbbbb\n\nbbbbbb\n\nbbbbbb\n\nbbbbbb\n\nbbbbbb\n\nbbbbbb\n\nbbbbbb"/>
-
-        </android.support.v4.widget.NestedScrollView>
-    </LinearLayout>
-
-</android.support.v4.widget.NestedScrollView>
+</LinearLayout>
