--- a/app/src/main/res/layout/activity_act_opts_second.xml
+++ b/app/src/main/res/layout/activity_act_opts_second.xml
@@ -12,7 +12,6 @@
         android:layout_height="50dp"
         android:background="@android:color/holo_blue_dark"
         android:gravity="center_vertical"
-        android:text="click to search"
-        android:transitionName="searchBar" />
+        android:text="click to search"/>
 
 </LinearLayout>
