--- a/app/src/main/res/layout/activity_retrofit.xml
+++ b/app/src/main/res/layout/activity_retrofit.xml
@@ -14,6 +14,23 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="testGet"
+        android:text="test get" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="postPost"
+        android:text="test post" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#000000"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:onClick="list"
         android:text="simple" />
 
