--- a/app/src/main/res/layout/activity_tab_bar.xml
+++ b/app/src/main/res/layout/activity_tab_bar.xml
@@ -22,7 +22,7 @@
         app:paddingStart="10dp"
         app:paddingEnd="10dp"
         app:tabMode="fixed"
-        app:tabGravity="center" />
+        app:tabGravity="fill" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
